--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,14 +1,13 @@
 @import url(~sanitize.css);
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 
 a {
     font-size: 1.5em;
     text-decoration: none;
     color: #222222;
-    color: rgba(255, 255, 255, 50%)
 }
 
 a:hover {
@@ -22,21 +21,16 @@ a:hover {
 
 header {
     background-image: linear-gradient(to right, #a25b5b, #692e4c);
-    padding: 1.5em 2em;
-    
 
     h1 {
         color: white;
         font-size: 2.6em;
         margin-top: 0;
     }
-}
 
-.header-top {
-  display: flex;
-  justify-content: space-between;
-  font-weight: bold;
-  padding-bottom: 50px;
+    a {
+        color: white;
+    }
 }
 
 nav {
@@ -47,6 +41,40 @@ nav {
     a {
         padding: 0 2em;
         text-transform: uppercase;
+        color: rgba(255, 255, 255, 50%);
     }
+}
 
+.flex,
+.row {
+    display: flex;
+}
+
+.row {
+    margin-left: -10px;
+    margin-right: -10px;
+}
+
+.col {
+    flex: 1;
+    padding: 10px;
+}
+
+.box {
+    background: #e3e3e3;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section {
+    padding: 30px;
+}
+
+.header-top {
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+    padding-bottom: 50px;
 }
